added logout for users
